# flycapture_video_recorder

./: .gitignore  CMakeLists.txt  README.md
src/: flycapture_opencv.cpp
